[package]
name = "webhook_error_reporter"
version = "0.1.0"
authors = ["thinkier <26728734+thinkier@users.noreply.github.com>"]
edition = "2018"

[dependencies.webhook_error_reporter_core]
path="_core"

[dependencies.webhook_error_reporter_macro]
path="_macro"

[features]
split_msg=["webhook_error_reporter_core/split_msg"]