[package]
name = "webhook_error_reporter_macro"
version = "0.1.0"
authors = ["thinkier <26728734+thinkier@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2="^1.0.18"
quote="^1.0.7"

[dependencies.syn]
version="^1.0.33"
features=["full"]

[features]
# Built in backtracing is feature-gated because it's still unstable on rust's end
backtrace=[]
